# concurrent-db-queue-benchmark

./: CHANGELOG.md  README.md  cabal.project  complete_event.sql  concurrent-queue-benchmark.cabal  create_event.sql  fetch.sql  fetch1.sql  fetch2.sql  grab_event.sql  hie.yaml  project_id_setup.sql  setup.sql
app/: Main.hs  Old.hs
sql/: create_events.sql  delete.sql  fetch.sql  insert_ids.sql  populate.sql  setup.sql
