cabal-version:      2.4
name:               concurrent-queue-benchmark
version:            0.1.0.0
author:             Swann Moreau
maintainer:         evertedsphere@gmail.com
extra-source-files: CHANGELOG.md

executable concurrent-queue-benchmark
    main-is:          Main.hs
    build-depends:    
      base ^>=4.14.1.0, timers, async, stm, postgresql-simple, text, bytestring, 
      uuid, clock, formatting, vector, protolude, resource-pool
    hs-source-dirs:   app
    default-language: Haskell2010
