cabal-version:      2.4
name:               concurrent-queue-benchmark
version:            0.1.0.0
author:             Swann Moreau
maintainer:         evertedsphere@gmail.com
extra-source-files: CHANGELOG.md

executable concurrent-queue-benchmark
  main-is:          Main.hs
  ghc-options: -threaded -rtsopts
  build-depends:
    , async
    , base               ^>=4.14.1.0
    , statistics
    , bytestring
    , clock
    , formatting
    , monad-control
    , postgresql-simple
    , protolude
    , resource-pool
    , stm
    , text
    , timers
    , transformers-base
    , uuid
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010
